--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
 	<!-- the entire body must be written by student -->
 	
-	<a href="https://picsum.photos/id/123/200/300">Home</a>
-		<a href="https://picsum.photos/id/124/200/300">About us</a>
-		<a href="https://picsum.photos/id/125/200/300">Contact us</a>
+	<a href="https://picsum.photos/id/123/200/300" target="blank">Home</a>
+		<a href="https://picsum.photos/id/124/200/300" target="blank">About us</a>
+		<a href="https://picsum.photos/id/125/200/300" target="blank">Contact us</a>
 	
 	
     <script type="text/javascript" src="./script.js">
