--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
 	<!-- the entire body must be written by student -->
 	<nav>
 		<ul>
-			<a href="https://picsum.photos/id/123/200/300" alt=car>Home</a>
-		<a href="https://picsum.photos/id/124/200/300" alt=car>About us</a>
-		<a href="https://picsum.photos/id/125/200/300" alt=car>Contact us</a>
+			<a href="https://picsum.photos/id/123/200/300" alt="ss">Home</a>
+		<a href="https://picsum.photos/id/124/200/300" alt=dd>About us</a>
+		<a href="https://picsum.photos/id/125/200/300" alt=ee>Contact us</a>
 	
 		</ul>
 	</nav>
