--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
 	<!-- the entire body must be written by student -->
 	<nav>
 		<ul>
-			<li><a href="https://picsum.photos/id/123/200/300" alt="">Home</a></li>
-		<li><a href="https://picsum.photos/id/124/200/300" alt="">About us</a></li>
-		<li><a href="https://picsum.photos/id/125/200/300" alt="">Contact us</a></li>
+			<li><a href="https://picsum.photos/id/123/200/300" alt="image1">Home</a></li>
+		<li><a href="https://picsum.photos/id/124/200/300" alt="image2">About us</a></li>
+		<li><a href="https://picsum.photos/id/125/200/300" alt="image3">Contact us</a></li>
 	
 		</ul>
 	</nav>
