--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
 	<!-- the entire body must be written by student -->
 	<nav>
 		<ul>
-			<li><img src="https://picsum.photos/id/123/200/300" alt="image1">Home</a></li>
-		<li><img src="https://picsum.photos/id/124/200/300" alt="image2">About us</a></li>
-		<li><img src="https://picsum.photos/id/125/200/300" alt="image3">Contact us</a></li>
+			<a href="https://picsum.photos/id/123/200/300" alt="image1">Home</a>
+		<a href="https://picsum.photos/id/124/200/300" alt="image2">About us</a>
+		<a href="https://picsum.photos/id/125/200/300" alt="image3">Contact us</a>
 	
 		</ul>
 	</nav>
