--- a/main.html
+++ b/main.html
@@ -4,21 +4,21 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	
+	<h1>3 random images</h1>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
  <nav>
 	 
- </nav>
+ 
 		<ul>
 			<a href="https://picsum.photos/id/123/200/300" alt="image1">Home</a>
 		<a href="https://picsum.photos/id/124/200/300" alt="image2">About us</a>
 		<a href="https://picsum.photos/id/125/200/300" alt="image3">Contact us</a>
 	
 		</ul>
-	
+ </nav>
 	
 	
 	
