--- a/main.html
+++ b/main.html
@@ -4,11 +4,12 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
- <title>3 random images</title>
+ 
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>3 random images</h1>
  <nav>
 	 
  
