--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	
+	<head>3 random images</head>
  <nav>
-	 <h1>3 random images</h1>
+	 
  
 		<ul>
 			<a href="https://picsum.photos/id/123/200/300" alt="image1">Home</a>
