--- a/main.html
+++ b/main.html
@@ -4,14 +4,14 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
- 
+3 random images
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
 	
  <nav>
-	<head>3 random images</head> 
+	 
  
 		<ul>
 			<a href="https://picsum.photos/id/123/200/300" alt="image1">Home</a>
