--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-3 random images
+
 </head>
 
 <body>
@@ -14,12 +14,16 @@
 	 
  
 		<ul>
-			<a href="https://picsum.photos/id/123/200/300" alt="image1">Home</a>
-		<a href="https://picsum.photos/id/124/200/300" alt="image2">About us</a>
-		<a href="https://picsum.photos/id/125/200/300" alt="image3">Contact us</a>
+			<a href="https://course.acciojob.com">Home</a>
+		<a href="https://course.acciojob.com">About us</a>
+		<a href="https://course.acciojob.com">Contact us</a>
 	
 		</ul>
  </nav>
+	<h1>3 random images</h1>
+	<img src="https://picsum.photos/id/123/200/300" alt="image1">
+	<img src="https://picsum.photos/id/124/200/300" alt="image2">
+	<img src="https://picsum.photos/id/125/200/300" alt="image3">
 	
 	
 	
